code cleanup (#1055)